Manifests/IsolatedNamespace_with_FabricForwarding.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ns1
  labels:
    core.juniper.net/isolated-namespace: "true"
  annotations:
    core.juniper.net/forwarding-mode: "ip-fabric"
