Manifests/MultiCluster-VN-VNR.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ns1
  labels:
    core.juniper.net/isolated-namespace: "true"
    ns: ns1
