Manifests/vnr-hubspoke2.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ns1
  labels:
    core.juniper.net/isolated-namespace: "true"
    ns: ns1
---
apiVersion: v1
kind: Namespace
metadata:
  name: ns2
  labels:
    core.juniper.net/isolated-namespace: "true"
    ns: ns2
