Manifests/BGPaaS-VMIR-1.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ns1
  labels:
    core.juniper.net/isolated-namespace: "true"
---
apiVersion: v1
kind: Pod
metadata:
  name: bird
  namespace: ns1
  annotations:
    k8s.v1.cni.cncf.io/networks: vn1
spec:
  containers:
    - image: pierky/bird:2.0.9
      imagePullPolicy: IfNotPresent
      name: bird
      volumeMounts:
        - name: config-volume
          mountPath: /etc/bird
  volumes:
    - name: config-volume
      configMap:
        name: bird-config
