Manifests/IsolatedNamespace_pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: centos1
  namespace: ns1
spec:
  containers:
  - name: centos1
    image: centos
    command: [ "/bin/bash", "-c" ]
    args:
      - sleep infinity;
    securityContext:
      privileged: true
      capabilities:
        add:
          - NET_ADMIN
