Manifests/VLAN-SubInterface.yaml
apiVersion: v1
kind: Pod
metadata:
  name: centos1
  namespace: ns1
  annotations:
    k8s.v1.cni.cncf.io/networks: |
      [
        {
          "name": "vn1",
          "namespace": "ns1",
          "cni-args": {
              "net.juniper.contrail.interfacegroup": "eth1"
          }
        },
        {
          "name": "vn2",
          "namespace": "ns1",
          "cni-args": {
              "net.juniper.contrail.vlan": "100",
              "net.juniper.contrail.interfacegroup": "eth1"
          }
        },
        {
          "name": "vn3",
          "namespace": "ns1",
          "cni-args": {
              "net.juniper.contrail.vlan": "200",
              "net.juniper.contrail.interfacegroup": "eth1"
          }
        }
      ]
spec:
  containers:
  - name: centos1
    image: centos
    command: [ "/bin/bash", "-c" ]
    args:
     - sleep infinity;
    securityContext:
      privileged: true
      capabilities:
        add:
          - NET_ADMIN
