Manifests/pod-multi-vn.yaml
apiVersion: v1
kind: Pod
metadata:
  name: centos1
  namespace: ns1
  annotations:
    k8s.v1.cni.cncf.io/networks: ns1/vn1, ns1/vn2
spec:
  containers:
  - name: centos1
    image: centos
    command: [ "/bin/bash", "-c" ]
    args:
      - ip route del default;
        ip route add default via 10.0.0.1;
        sleep infinity;
    securityContext:
      privileged: true
      capabilities:
        add:
          - NET_ADMIN
