Manifests/ClusterIP.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-service
  namespace: ns1
spec:
selector:
    app: web
ports:
- port: 80
  targetPort: 80
---
apiVersion: v1
kind: Pod
metadata:
  name: nginx
  namespace: ns1
  labels:
    app: web
spec:
  containers:
  - name: nginx
    image: nginx
    securityContext:
      privileged: true
    ports:
    - containerPort: 80
