Manifests/Loadbalancer-ENS.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-service
  namespace: ns1
  annotations:
    service.contrail.juniper.net/externalNetwork: ns1/vn-external2
spec:
  type: LoadBalancer
  selector:
    app: web
  ports:
  - port: 8080
    targetPort: 80
