Manifests/NodePort.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-service
  namespace: ns1
spec:
  type: NodePort
  selector:
    app: web
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30010
---
apiVersion: v1
kind: Pod
metadata:
  name: nginx
  namespace: ns1
  labels:
    app: web
  annotations:
    k8s.v1.cni.cncf.io/networks: ns1/vn1
spec:
  containers:
  - name: nginx
    image: nginx
    securityContext:
      privileged: true
    ports:
    - containerPort: 80
